# HIT-md2docx

./: .gitattributes  .gitignore  LICENSE  README.md  SKILL.md  generate.py  heading_translations.json  md2docx.py  pyproject.toml  模板.docx
example/: thesis-demo-hit.md  论文_中国制造2025产业政策与新质生产力.md  论文_中国制造2025产业政策与新质生产力_HIT博士规范版.docx  论文_中国制造2025产业政策与新质生产力_HIT本科规范版.docx  论文_中国制造2025产业政策与新质生产力_HIT硕士规范版.docx  论文_平台反垄断与研发投入.md  论文_平台反垄断与研发投入_HIT硕士规范版.docx
input/: front_matter_hit.md  front_matter_mc2025_bachelor.md  front_matter_mc2025_doctor.md  front_matter_mc2025_master.md  heading_translations.json  封面.docx
skill/: SKILL.md
skill/agents/: openai.yaml
skill/references/: example-md.md  hit-master-review-points.md  markdown-usage.md  pdf-backends.md  selfcheck-checklist.md  template-spec.md  troubleshooting.md
skill/scripts/: audit_docx.py  check_env.sh  cover_inject.py  degree_adapt.py  export_docx.sh  export_pdf.sh  fill_cover.py  fix_docx.py  format_rules.py  md_to_fordocx.py  preprocess_equations.py  report.py  run_engine.py  run_engine.sh
skill/subskills/audit/: SKILL.md
thesis-specs/: README.md  封面.docx
thesis_md2docx/: __init__.py  _embedded_assets.py  _remote_assets.py  audit.py  body_rules.py  constants.py  doctor.py  exporter.py  frontmatter.py  inline.py  ir.py  layout.py  main.py  markdown.py  media.py  parser.py  pdf_compare.py  table_utils.py  toc.py  translation.py
thesis_md2docx/builders/: __init__.py  document.py
thesis_md2docx/math/: __init__.py  converter.py
thesis_md2docx/ooxml/: __init__.py  images.py  paragraphs.py  parts.py  render.py  tables.py  text.py  xml.py
thesis_md2docx/pdf/: common.py  main.py  registry.py
thesis_md2docx/profiles/: __init__.py  base.py  registry.py
thesis_md2docx/styles/: __init__.py  body.py  catalog.py  fonts.py  numbering.py  ooxml.py  properties.py  roles.py
(+35 files in other folders)
